<resources>
    <string name="facebook_app_id">1785340755127232</string>
    <string name="fb_login_protocol_scheme">fb1785340755127232</string>

    <string name="app_name">uWish</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_menu">Menu</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_hint">Search for friends</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="category">Category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_dashboard">Home</string>
    <string name="nav_myprofile">My profile</string>
    <string name="nav_mywishlist">My wish list</string>
    <string name="nav_makeawish">Make a wish</string>
    <string name="nav_friendlist">Friend list</string>
    <string name="nav_friendrequests">Friend requests</string>
    <string name="nav_invitefriends">Invite friends</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_createevent">Create event</string>
    <string name="nav_myevents">My events</string>
    <string name="nav_privacy">Manage privacy</string>
    <string name="nav_logout">Log out</string>


    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a name, email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>My wish list</item>
        <item>Friend list</item>
        <item>Friend requests</item>
        <item>Calendar</item>
        <item>My events</item>
    </string-array>
</resources>
