<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_home">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_logofinal"
            android:title="@string/nav_dashboard" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_me">
            <item
                android:id="@+id/nav_myprofile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/nav_myprofile" />
            <item
                android:id="@+id/nav_mywishlist"
                android:icon="@drawable/ic_gift"
                android:title="@string/nav_mywishlist" />
            <item
                android:id="@+id/nav_makeawish"
                android:icon="@drawable/ic_wishy"
                android:title="@string/nav_makeawish" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_friends">
            <item
                android:id="@+id/nav_friendlist"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/nav_friendlist" />
            <item
                android:id="@+id/nav_friendrequests"
                android:icon="@drawable/ic_add_friend"
                android:title="@string/nav_friendrequests" />
            <item
                android:id="@+id/nav_invitefriends"
                android:icon="@drawable/ic_add_friend"
                android:title="@string/nav_invitefriends" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_events">
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar"
                android:title="@string/nav_calendar" />
            <item
                android:id="@+id/nav_createevent"
                android:icon="@drawable/ic_add_event"
                android:title="@string/nav_createevent" />
            <item
                android:id="@+id/nav_myevents"
                android:icon="@drawable/ic_event"
                android:title="@string/nav_myevents" />
    </group>
    <group android:id="@+id/nav_settings">
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_lock"
            android:title="@string/nav_privacy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_logout" />
    </group>

</menu>