<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cover1" />
        </FrameLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@mipmap/logo_signin"
            android:paddingBottom="48dp"
            android:paddingTop="42dp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_corners"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailField"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_corners"
                android:hint="@string/name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameField"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_corners"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordField"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:padding="12dp"
                android:text="@string/sign_up_text"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:textStyle="bold" />

            <!--<Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/passwordField"
                android:layout_below="@id/passwordField"
                android:text="@string/sign_up_button_label" />-->
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>